--- a/example.env
+++ b/example.env
@@ -40,3 +40,23 @@
 # Set if accessing paperless via a domain subpath e.g. https://domain.com/PATHPREFIX and using a reverse-proxy like traefik or nginx
 #PAPERLESS_FORCE_SCRIPT_NAME=/PATHPREFIX
 #PAPERLESS_STATIC_URL=/PATHPREFIX/static/ # trailing slash required
+
+# 1. Please put the value in double quotes to avoid problems.
+# 2. To use the file, you need to map the file to `/.env` in the container.
+
+# RCLONE_REMOTE_NAME="RcloneBackup"
+# RCLONE_REMOTE_DIR="/RcloneBackup/"
+# RCLONE_GLOBAL_FLAG=""
+# CRON="5 * * * *"
+# ZIP_ENABLE="TRUE"
+# ZIP_PASSWORD="123456"
+# ZIP_TYPE="zip"
+# BACKUP_FILE_SUFFIX="%Y%m%d"
+# BACKUP_KEEP_DAYS="0"
+# PING_URL=""
+# MAIL_SMTP_ENABLE="FALSE"
+# MAIL_SMTP_VARIABLES=""
+# MAIL_TO=""
+# MAIL_WHEN_SUCCESS="TRUE"
+# MAIL_WHEN_FAILURE="TRUE"
+# TIMEZONE="UTC"
