--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,12 +73,18 @@ services:
       BACKUP_FILE_SUFFIX: '%Y-%m-%d_%H-%M-%S'
       BACKUP_KEEP_DAYS: 30
     #   PING_URL: ''
-    #   MAIL_SMTP_ENABLE: 'FALSE'
-    #   MAIL_SMTP_VARIABLES: ''
-    #   MAIL_TO: ''
-    #   MAIL_WHEN_SUCCESS: 'TRUE'
-    #   MAIL_WHEN_FAILURE: 'TRUE'
+      # MAIL_SMTP_ENABLE: 'TRUE'
+      # MAIL_SMTP_VARIABLES: '-S smtp-use-ssl \
+      #   -S smtp=${SMTP_SERVER} \
+      #   -S smtp-auth=login \
+      #   -S smtp-auth-user=${SMTP_SENDER_EMAIL} \
+      #   -S smtp-auth-password=${SMTP_SENDER_PASSWORD} \
+      #   -S from=${SMTP_SENDER_EMAIL}'
+      # MAIL_TO: ${SMTP_RECEIVER_EMAIL}
+      # MAIL_WHEN_SUCCESS: 'TRUE'
+      # MAIL_WHEN_FAILURE: 'TRUE'
       TIMEZONE: 'Europe/Vienna'
+    #entrypoint: mail
     volumes:
       - ~/.config/rclone:/config/rclone
       - backup:/backup
@@ -99,7 +105,6 @@ services:
     volumes:
       - consume:/home/paperless/consume
       - ./scripts:/etc/scanbd/scripts
-      - ./scanbd/run.sh:/run.sh
       - ./scanbd/scanbd.conf:/etc/scanbd/scanbd.conf
     devices:
       - /dev/bus/usb:/dev/bus/usb
