Update Dockerfile healthcheck and add restart policy to backup service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,7 @@ services:
 
   backup:
     image: adrienpoupa/rclone-backup:latest
+    restart: unless-stopped
     environment:
       RCLONE_REMOTE_NAME: 'RcloneBackup'
       RCLONE_REMOTE_DIR: ${RCLONE_REMOTE_DIR}
