--- a/.env_example
+++ b/.env_example
@@ -9,7 +9,8 @@ PAPERLESS_ADMIN_USER=demo_admin
 PAPERLESS_ADMIN_PASSWORD=demo_password
 RCLONE_BACKUP_ENCRYPTION_PASSWORD="demo_encryption_password"
 RCLONE_REMOTE_DIR="/path/to/demo/backup"
-SMTP_SERVER="smtp://smtp.example.com:587"
-SMTP_SENDER_EMAIL="demo.sender@example.com"
-SMTP_SENDER_PASSWORD="demo_sender_password"
-SMTP_RECEIVER_EMAIL="demo.receiver@example.com"
+SMTP_SERVER="smtp.example.com:587"
+SMTP_SENDER_EMAIL="sender@example.com"
+SMTP_SENDER_LOGIN="sender%40example.com"
+SMTP_SENDER_PASSWORD="example_password"
+SMTP_RECEIVER_EMAIL="receiver@example.com"
