--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
       PAPERLESS_URL: ${PAPERLESS_URL}
       PAPERLESS_REDIS: redis://broker:6379
       PAPERLESS_DBHOST: db
-      PAPERLESS_OCR_USER_ARGS: '{"invalidate_digital_signatures": true}'
+      PAPERLESS_OCR_USER_ARGS: '{"invalidate_digital_signatures": true, "color-conversion-strategy": "RGB" }'
       #PAPERLESS_EMAIL_TASK_CRON: '*/1 * * * *'
     networks:
       - default
@@ -62,30 +62,23 @@ services:
     environment:
       RCLONE_REMOTE_NAME: 'RcloneBackup'
       RCLONE_REMOTE_DIR: ${RCLONE_REMOTE_DIR}
-    #   RCLONE_GLOBAL_FLAG: ''
       CRON: '0 5 * * WED'
       BACKUP_FOLDER_NAME: 'paperless'
       BACKUP_FOLDER_PATH: '/backup'
-    #   DB_TYPE: 'sqlite'
-    #   SQLITE_DATABASE: '/database/database.sqlite'
       ZIP_ENABLE: 'TRUE'
       ZIP_PASSWORD: ${RCLONE_BACKUP_ENCRYPTION_PASSWORD}
       ZIP_TYPE: '7z'
       BACKUP_FILE_SUFFIX: '%Y-%m-%d_%H-%M-%S'
       BACKUP_KEEP_DAYS: 30
-    #   PING_URL: ''
-      # MAIL_SMTP_ENABLE: 'TRUE'
-      # MAIL_SMTP_VARIABLES: '-S smtp-use-ssl \
-      #   -S smtp=${SMTP_SERVER} \
-      #   -S smtp-auth=login \
-      #   -S smtp-auth-user=${SMTP_SENDER_EMAIL} \
-      #   -S smtp-auth-password=${SMTP_SENDER_PASSWORD} \
-      #   -S from=${SMTP_SENDER_EMAIL}'
-      # MAIL_TO: ${SMTP_RECEIVER_EMAIL}
-      # MAIL_WHEN_SUCCESS: 'TRUE'
-      # MAIL_WHEN_FAILURE: 'TRUE'
+      MAIL_SMTP_ENABLE: 'TRUE'
+      MAIL_SMTP_VARIABLES: |
+        -S v15-compat
+        -S smtp-use-starttls
+        -S smtp-auth=login
+        -S mta=smtp://${SMTP_SENDER_LOGIN}:${SMTP_SENDER_PASSWORD}@${SMTP_SERVER}
+        -S from=${SMTP_SENDER_EMAIL}
+      MAIL_TO: ${SMTP_RECEIVER_EMAIL}
       TIMEZONE: 'Europe/Vienna'
-    #entrypoint: mail
     volumes:
       - ~/.config/rclone:/config/rclone
       - backup:/backup
